# LAB-IPC1-EJEMPLOS

./: .gitignore
BorradorClase11/: pom.xml
BorradorClase12/: pom.xml
BorradorClase13/backend/: package-lock.json  package.json
BorradorClase13/backend/src/: AppState.js  app.js  autenticacion.js
BorradorClase7/: pom.xml
BorradorClase7/reportes/daniel/: historialImagenes.html
Clase10/: pom.xml
Clase10/reportes/: reporteUsuarios.txt
Clase10Borrador/: pom.xml
Clase12/: pom.xml
Clase13/: pom.xml
Clase7/: pom.xml
Clase7/reportes/jose/: historialImagenes.html
Clase8/: pom.xml
Clase9/: pom.xml
Clase9Final/: pom.xml
Pruebas/: pom.xml
Pruebas/reportes/: table.html
Unidad 1. Fundamentos de Programacion/Clase1/: pom.xml
Unidad 1. Fundamentos de Programacion/Clase2/: pom.xml
Unidad 2 y 3/Clase3/: pom.xml
Unidad 4/Clase4/: pom.xml
Unidad 4/Clase5/: pom.xml
flask/: .pdm-python  .pdm.toml  pyproject.toml
flask/src/: app.py  app_state.py
flask/src/blueprints/: autenticacion.py  tareas.py
flask/src/static/css/: base.css
flask/src/static/css/autenticacion/: login.css  navbar.css  registro.css
flask/src/static/css/layout/: navbar.css
flask/src/static/css/tareas/: crear_tabla.css
flask/src/templates/: index.html
flask/src/templates/autenticacion/: login.html  registro.html
flask/src/templates/layout/: menu.html  navbar.html
flask/src/templates/paciente/: solicitar_cita.html
flask/src/templates/tareas/: crear_tarea.html
todoApp/backend/: .env  package-lock.json  package.json
todoApp/database/: crear_db.sql
(+117 files in other folders)
